Add TypeScript path mappings and Jest configuration; update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "src/*": ["src/*"],
+      "@auth/*": ["src/modules/auth/*"],
+      "@transaction/*": ["src/modules/transaction/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
